--- a/app/src/main/res/layout/debt_main_item.xml
+++ b/app/src/main/res/layout/debt_main_item.xml
@@ -123,7 +123,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:gravity="center"
-                            android:text="Zwiń" />
+                            android:text="@string/shrink" />
 
                     </LinearLayout>
 
@@ -287,7 +287,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:gravity="center"
-                        android:text="Rozwiń" />
+                        android:text="@string/expand" />
 
                 </LinearLayout>
 
